--- a/style.css
+++ b/style.css
@@ -232,3 +232,97 @@
 .spinner.newton .ball:last-child::after {
   -webkit-animation: newtonBallFirst 1s ease-in infinite alternate-reverse;
 }
+
+/* CLOCK */
+
+@-webkit-keyframes clockHandRotate {
+  from { transform: rotate(0deg) translateY(6%); }
+  to { transform: rotate(360deg) translateY(6%); }
+}
+@keyframes clockHandRotate {
+  from { transform: rotate(0deg) translateY(6%); }
+  to { transform: rotate(360deg) translateY(6%); }
+}
+
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    -webkit-transform: translate3d(0,0,0);
+  }
+  40% {
+    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    -webkit-transform: translate3d(0, -30px, 0);
+  }
+  70% {
+    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    -webkit-transform: translate3d(0, -15px, 0);
+  }
+  90% {
+    -webkit-transform: translate3d(0,-4px,0);
+  }
+}
+
+@-webkit-keyframes clockShadowFade {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    opacity: 1;
+  }
+  40% {
+    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    opacity: 0.2;
+  }
+  70% {
+    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    opacity: 0.4;
+  }
+  90% {
+    opacity: 0.8;
+  }
+}
+
+.spinner.clock {
+  width: 4em;
+  height: 4em;
+}
+
+.spinner.clock .dial {
+  width: 100%;
+  height: 100%;
+  border: 0.2em solid #333;
+  border-radius: 4em;
+  box-sizing: border-box;
+  -webkit-animation: bounce 1.5s infinite;
+}
+
+.spinner.clock .dial::before,
+.spinner.clock .dial::after {
+  content: '';
+  position: absolute;
+  bottom: 2em;
+  width: 0.2em;
+  left: 50%;
+  margin-left: -0.1em;
+  background-color: #333;
+  transform-origin: 50% 100%;
+  border-radius: 0 0 0.2em 0.2em;
+}
+
+.spinner.clock .dial::before {
+  height: 1em;
+  -webkit-animation: clockHandRotate 12s linear infinite;
+}
+
+.spinner.clock .dial::after {
+  height: 1.5em;
+  -webkit-animation: clockHandRotate 1s linear infinite;
+}
+
+.spinner.clock .shadow {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 0.5em;
+  margin-bottom: -0.25em;
+  background: radial-gradient(rgba(0, 0, 0, 0.4), transparent 60%);
+  -webkit-animation: clockShadowFade 1.5s linear infinite;
+}
