Create examples slideshow. Browser compat

--- a/style.css
+++ b/style.css
@@ -18,18 +18,10 @@
   to { transform: rotate(360deg); }
 }
 
-.spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -2em;
-  margin-top: -2em;
-}
-
-
 /* COLOR WHEEL */
 
 .spinner.colorwheel {
+  position: relative;
   display: inline-block;
   width: 4em;
   height: 4em;
@@ -116,24 +108,26 @@
 .spinner.windcatcher {
   width: 4em;
   perspective: 50em;
+  -webkit-animation: rotate 4s linear infinite;
+  animation: rotate 4s linear infinite;
 }
 
 .spinner.windcatcher .blade {
   height: 0.5em;
   background: red;
   margin-bottom: 0.1em;
-  -webkit-animation: windcatcherSpin 8s linear infinite, windcatcherBg 4s linear infinite;
-  animation: windcatcherSpin 8s linear infinite, windcatcherBg 4s linear infinite;
+  -webkit-animation: windcatcherSpin 4s linear infinite, windcatcherBg 2s linear infinite;
+  animation: windcatcherSpin 4s linear infinite, windcatcherBg 2s linear infinite;
 }
 
 .spinner.windcatcher .blade:nth-child(1) { -webkit-animation-delay: 0s; animation-delay: 0s; }
-.spinner.windcatcher .blade:nth-child(2) { -webkit-animation-delay: 0.5s; animation-delay: 0.5s; }
-.spinner.windcatcher .blade:nth-child(3) { -webkit-animation-delay: 1s; animation-delay: 1s; }
-.spinner.windcatcher .blade:nth-child(4) { -webkit-animation-delay: 1.5s; animation-delay: 1.5s; }
-.spinner.windcatcher .blade:nth-child(5) { -webkit-animation-delay: 2s; animation-delay: 2s; }
-.spinner.windcatcher .blade:nth-child(6) { -webkit-animation-delay: 2.5s; animation-delay: 2.5s; }
-.spinner.windcatcher .blade:nth-child(7) { -webkit-animation-delay: 3s; animation-delay: 3s; }
-.spinner.windcatcher .blade:nth-child(8) { -webkit-animation-delay: 3.5s; animation-delay: 3.5s; }
+.spinner.windcatcher .blade:nth-child(2) { -webkit-animation-delay: 0.25s; animation-delay: 0.25s; }
+.spinner.windcatcher .blade:nth-child(3) { -webkit-animation-delay: 0.5s; animation-delay: 0.5s; }
+.spinner.windcatcher .blade:nth-child(4) { -webkit-animation-delay: 0.75s; animation-delay: 0.75s; }
+.spinner.windcatcher .blade:nth-child(5) { -webkit-animation-delay: 1s; animation-delay: 1s; }
+.spinner.windcatcher .blade:nth-child(6) { -webkit-animation-delay: 1.25s; animation-delay: 1.25s; }
+.spinner.windcatcher .blade:nth-child(7) { -webkit-animation-delay: 1.5s; animation-delay: 1.5s; }
+.spinner.windcatcher .blade:nth-child(8) { -webkit-animation-delay: 1.75s; animation-delay: 1.75s; }
 
 
 /* SLABS */
@@ -141,7 +135,13 @@
 @-webkit-keyframes slabMove {
   0% { transform: translateY(0) rotateX(30deg); opacity: 0; }
   10% { transform: translateY(-48%); opacity: 1; }
-  90% { transform: translateY(-422%); opacity: 1; }
+  90% { transform: translateY(-422%); opacity: 0.1; }
+  100% { transform: translateY(-480%); opacity: 0; }
+}
+@keyframes slabMove {
+  0% { transform: translateY(0) rotateX(30deg); opacity: 0; }
+  10% { transform: translateY(-48%); opacity: 1; }
+  90% { transform: translateY(-422%); opacity: 0.1; }
   100% { transform: translateY(-480%); opacity: 0; }
 }
 
@@ -161,12 +161,13 @@
   box-shadow: -0.08em 0.15em 0 rgb(55, 55, 55);
   transform-origin: 50% 0%;
   -webkit-animation: slabMove 4s linear infinite;
+  animation: slabMove 4s linear infinite;
 }
 
-.spinner.slabs .slab:nth-child(1) { -webkit-animation-delay: 0s; }
-.spinner.slabs .slab:nth-child(2) { -webkit-animation-delay: 1s; }
-.spinner.slabs .slab:nth-child(3) { -webkit-animation-delay: 2s; }
-.spinner.slabs .slab:nth-child(4) { -webkit-animation-delay: 3s; }
+.spinner.slabs .slab:nth-child(1) { -webkit-animation-delay: 0s; animation-delay: 0s; }
+.spinner.slabs .slab:nth-child(2) { -webkit-animation-delay: 1s; animation-delay: 1s; }
+.spinner.slabs .slab:nth-child(3) { -webkit-animation-delay: 2s; animation-delay: 2s; }
+.spinner.slabs .slab:nth-child(4) { -webkit-animation-delay: 3s; animation-delay: 3s; }
 
 
 /* NEWTON'S BALLS */
@@ -184,7 +185,25 @@
   53% { transform: rotate(0deg); }
   100% { transform: rotate(0deg); }
 }
-@-webkit-keyframes newtonBallLast {
+@keyframes newtonBallLast {
+  0% { transform: rotate(0deg); }
+  50% { transform: rotate(0deg); }
+  100% { transform: rotate(-70deg); }
+}
+@keyframes newtonBallFirst {
+  0% { transform: rotate(70deg); }
+  50% { transform: rotate(0deg); }
+  100% { transform: rotate(0deg); }
+}
+@keyframes newtonBallMiddle {
+  0% { transform: rotate(0deg); }
+  50% { transform: rotate(0deg); }
+  51% { transform: rotate(-0.5deg); }
+  52% { transform: rotate(0.5deg); }
+  53% { transform: rotate(0deg); }
+  100% { transform: rotate(0deg); }
+}
+@keyframes newtonBallLast {
   0% { transform: rotate(0deg); }
   50% { transform: rotate(0deg); }
   100% { transform: rotate(-70deg); }
@@ -222,20 +241,25 @@
 
 .spinner.newton .ball {
   -webkit-animation: newtonBallMiddle 1s infinite alternate;
+  animation: newtonBallMiddle 1s infinite alternate;
 }
 
 .spinner.newton .ball:first-child {
   -webkit-animation: newtonBallFirst 1s ease-in infinite alternate;
+  animation: newtonBallFirst 1s ease-in infinite alternate;
 }
 .spinner.newton .ball:first-child::after {
   -webkit-animation: newtonBallLast 1s ease-out infinite alternate-reverse;
+  animation: newtonBallLast 1s ease-out infinite alternate-reverse;
 }
 
 .spinner.newton .ball:last-child {
   -webkit-animation: newtonBallLast 1s ease-out infinite alternate;
+  animation: newtonBallLast 1s ease-out infinite alternate;
 }
 .spinner.newton .ball:last-child::after {
   -webkit-animation: newtonBallFirst 1s ease-in infinite alternate-reverse;
+  animation: newtonBallFirst 1s ease-in infinite alternate-reverse;
 }
 
 
@@ -252,33 +276,67 @@
 
 @-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
-    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    -webkit-transform: translate3d(0,0,0);
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transform: translate3d(0,0,0);
   }
   40% {
-    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    -webkit-transform: translate3d(0, -30px, 0);
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -30px, 0);
   }
   70% {
-    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    -webkit-transform: translate3d(0, -15px, 0);
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -15px, 0);
   }
   90% {
-    -webkit-transform: translate3d(0,-4px,0);
+    transform: translate3d(0,-4px,0);
+  }
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transform: translate3d(0,0,0);
+  }
+  40% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -30px, 0);
+  }
+  70% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -15px, 0);
+  }
+  90% {
+    transform: translate3d(0,-4px,0);
   }
 }
 
 @-webkit-keyframes clockShadowFade {
   0%, 20%, 50%, 80%, 100% {
-    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
     opacity: 1;
   }
   40% {
-    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
     opacity: 0.2;
   }
   70% {
-    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    opacity: 0.4;
+  }
+  90% {
+    opacity: 0.8;
+  }
+}
+@keyframes clockShadowFade {
+  0%, 20%, 50%, 80%, 100% {
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    opacity: 1;
+  }
+  40% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    opacity: 0.2;
+  }
+  70% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
     opacity: 0.4;
   }
   90% {
@@ -289,15 +347,18 @@
 .spinner.clock {
   width: 4em;
   height: 4em;
+  position: relative;
 }
 
 .spinner.clock .dial {
   width: 100%;
   height: 100%;
+  background: white;
   border: 0.2em solid #333;
   border-radius: 4em;
   box-sizing: border-box;
   -webkit-animation: bounce 1.5s infinite;
+  animation: bounce 1.5s infinite;
 }
 
 .spinner.clock .dial::before,
@@ -316,11 +377,13 @@
 .spinner.clock .dial::before {
   height: 1em;
   -webkit-animation: clockHandRotate 12s linear infinite;
+  animation: clockHandRotate 12s linear infinite;
 }
 
 .spinner.clock .dial::after {
   height: 1.5em;
   -webkit-animation: clockHandRotate 1s linear infinite;
+  animation: clockHandRotate 1s linear infinite;
 }
 
 .spinner.clock .shadow {
@@ -331,6 +394,7 @@
   margin-bottom: -0.25em;
   background: radial-gradient(rgba(0, 0, 0, 0.4), transparent 60%);
   -webkit-animation: clockShadowFade 1.5s linear infinite;
+  animation: clockShadowFade 1.5s linear infinite;
 }
 
 
@@ -340,7 +404,6 @@
   0% { transform: rotateX(360deg) rotateY(0deg); }
   100% { transform: rotateX(0deg) rotateY(360deg); }
 }
-
 @keyframes sphereSpin {
   0% { transform: rotateX(360deg) rotateY(0deg); }
   100% { transform: rotateX(0deg) rotateY(360deg); }
@@ -366,7 +429,7 @@
   width: 100%;
   height: 100%;
   border-radius: 4em;
-  border: 0.3em dashed black;
+  border: 0.3em dotted black;
 }
 
 @-webkit-keyframes rotateDisc2 {
