--- a/style.css
+++ b/style.css
@@ -312,8 +312,9 @@
   left: 50%;
   margin-left: -0.1em;
   background-color: #333;
-  transform-origin: 50% 100%;
   border-radius: 0 0 0.2em 0.2em;
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
 }
 
 .spinner.clock .dial .hour.hand {
@@ -354,13 +355,16 @@
 .spinner.sphere {
   width: 4em;
   height: 4em;
+  -webkit-transform: perspective(20em) rotateX(-24deg) rotateY(20deg) rotateZ(30deg);
   transform: perspective(20em) rotateX(-24deg) rotateY(20deg) rotateZ(30deg);
+  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
 
 .spinner .inner {
   width: 100%;
   height: 100%;
+  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-animation: sphereSpin 6s linear infinite;
   animation: sphereSpin 6s linear infinite;
